[package]
name = "npr"
description = "Tool to check for not pushed repositories."
version = "0.2.0"
authors = ["Marcelo Henrique Neppel <marcelo.neppel@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/marceloneppel/npr"
edition = "2018"

[dependencies]
docopt = "1.0"
git2 = "0.8"
serde = "1.0"
serde_derive = "1.0"